--- a/site/package.json
+++ b/site/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-sitemap": "^2.4.11",
     "gatsby-plugin-transition-link": "^1.20.2",
     "gatsby-source-filesystem": "^2.3.14",
+    "gatsby-source-prismic": "^3.2.1",
     "gatsby-transformer-sharp": "^2.5.7",
     "html-react-parser": "^0.13.0",
     "node-sass": "^4.14.1",
